# ohtuvarasto

./: .coverage  .pylintrc  README.md  pyproject.toml  tied1.txt
.github/workflows/: main.yml
src/: index.py  varasto.py
src/tests/: varasto_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/poetry-web/nhl-reader/: pyproject.toml
viikko2/poetry-web/nhl-reader/src/: index.py  player.py
